
=== Configuration changes in 1.19 ===
* $wgRateLimitsExcludedGroups (deprecated in 1.13) has been removed
* $wgInputEncoding and $wgOutputEncoding (deprecated in 1.5) have now been removed
* $wgAllowUserSkin (deprecated in 1.16) has now been removed
* $wgExtraRandompageSQL (deprecated in 1.16) has now been removed
* LogReader and LogViewer classes (deprecated in 1.14) have now been removed

=== New features in 1.19 ===
* (bug 28916) A way to to toggle mw.config legacy globals settings from
  LocalSettings.php has been created by introducing $wgLegacyJavaScriptGlobals.
* (bug 28503) Support for ircs:// URL protocols

=== Bug fixes in 1.19 ===
* (bug 10154) Don't allow user to specify days beyond $wgRCMaxAge.
* (bug 28868) Show total pages in the subtitle of an image on the
file description page for multi-paged documents.
* (bug 28883) Message names for different compression types commonly
used in Tiff files.
* When translcuding a special page, do not let it interpret url parameters.
* (bug 28887) Special page classes are no longer re-used during 1 request.
* New title field of Special:MovePage is now length limited on client side.
* (bug 28888) Searching for something starting with a # sign no longer tells
  the user a page named [[:]] already exists.
* (bug 28960) Added more messages to Special:EmailUser.
* (bug 23002) Imagelinks table not updated after imagemove.
* (bug 27864) Transcluding {{Special:Prefix}} with empty prefix now lists all
  pages.
* (bug 18803) JPEG2000 images can no longer be uploaded as JPEG image.

=== API changes in 1.19 ===
* (bug 27790) add query type for querymodules to action=paraminfo
* (bug 28963) add langbacklinks module to api

=== Languages updated in 1.19 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

* Bhojpuri (bho) (renamed from "bh").

== Compatibility ==
